--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -99,6 +99,122 @@
                       </div>
 
                       <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongodb-objectid-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> MongoDB | ObjectID() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/how-to-handle-badwords-in-node-js/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to handle badwords in Node.js?</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-this-binding/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | This Binding</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-mapbox-reverse-geocoding-api/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | Mapbox Forward Geocoding API</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-mapbox-reverse-geocoding-api/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | https.request() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-mapbox-reverse-geocoding-api/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | Mapbox Reverse Geocoding API</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-promise-chaining/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | Promise Chaining</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/node-js-dark-sky-api-for-weather-forecasts/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Node.js | Dark Sky API for Weather Forecasts</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-path-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.path() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-set-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.set() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-route-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.route() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-post-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.post() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-put-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.put() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-listen-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.listen() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-method-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.method() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-param-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.param() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-res-location-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | res.location() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-all-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.all() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-render-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.render() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-get-request-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.get() Request Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-get-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.get() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-delete-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.delete() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-use-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.use() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-enabled-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.enabled() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-disabled-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.disabled() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-app-enable-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | app.enable() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-res-format-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | res.format() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-res-clearcookie-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | res.clearCookie() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/express-js-router-use-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express.js | router.use() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
                         <a target="__blank" href="https://www.geeksforgeeks.org/node-js-yargs-module/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to use the Yargs Module in Node.js?</a>
                       </div>
 
@@ -161,6 +277,74 @@
 
                       <div class="col-lg-6 col-md-6 col-12">
                         <a target="__blank" href="https://medium.com/@gouravhammad477/validation-in-node-js-using-the-express-validator-module-cd815ec082f1" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Express-validator: Best validation module in node.js</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-countdocuments-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | countDocuments() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-exists-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | exists() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-where-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | where() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-replaceone-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | replaceOne() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-updateone-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | updateOne() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-remove-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | remove() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-update-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | update() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-findoneandupdate-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | findOneAndUpdate() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-save-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | save() Function </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/mongoose-estimateddocumentcount-function/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Mongoose | estimatedDocumentCount() Function</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/data-communication-terminologies/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Data Communication Terminologies </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/types-of-web-hosting/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Types of Web Hosting</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/video-conferencing-protocols/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Video Conferencing Protocols </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/chat-conferencing-protocols/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Chat Conferencing Protocols</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/protection-methods-for-network-security/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Protection Methods for Network Security </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/shorthand-syntax-for-object-property-value-in-es6/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Shorthand Syntax for Object Property Value in ES6 </a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.geeksforgeeks.org/internetworking-terms-and-concepts/" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Internetworking Terms and Concepts </a>
                       </div>
 
                     </div>
