--- a/views/Blog.ejs
+++ b/views/Blog.ejs
@@ -354,6 +354,10 @@
                     <div class="row text-center text-lg-left">
                   
                       <div class="col-lg-6 col-md-6 col-12">
+                        <a target="__blank" href="https://www.youtube.com/watch?v=r5aKWdaGijI&t=30s" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> How to solve your first problem on CodeChef?</a>
+                      </div>
+
+                      <div class="col-lg-6 col-md-6 col-12">
                         <a target="__blank" href="https://www.youtube.com/playlist?list=PLo0PgqIkFWBzzwjRvubiCQjEKCv2Lr1mi" class="d-block mb-4 h-100 text-light font-weight-bold h4"><i class="fa fa-bolt text-warning" aria-hidden="true"></i> Top 8 project ideas for CS Students</a>
                       </div>
 
