--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -84,7 +84,7 @@
         <div class=" font-weight-bold mb-5">+91-9826527244
           <a href="mailto:gourav.hammad.sdbc@gmail.com"> gourav.hammad.sdbc@gmail.com</a>
         </div>
-        <p class="lead mb-5 text-justify">I want to obtain a position of responsibility that utilizes my skills and keen to work in an environment where I can enrich my knowledge and contribute to the growth of the company.</p>
+        <p class="lead mb-5 text-justify">Looking for a position of responsibility that utilizes my skills and keen to work in an environment where I can enrich my knowledge and contribute to the growth of the company.</p>
         <div class="social-icons">
           <a target="__blank" href="https://www.linkedin.com/in/gouravhammad/">
             <i class="fab fa-linkedin-in"></i>
@@ -164,7 +164,7 @@
           <div class="resume-content">
             <h3 class="mb-0">JavaScript Developer</h3>
             <div class="subheading mb-3">Olecons Technology, Indore</div>
-            <p class="text-justify">I am presently working as a JavaScript Developer. Design, develop, and implement JavaScript solutions leveraging Node.js. Participate in an Agile team and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I am presently working as a JavaScript Developer. I am responsible for Designing, developing, and implementing JavaScript solutions leveraging Node.js. Participate in an Agile team and actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Feb 2020 - Present</span>
@@ -183,7 +183,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. We are tasked to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 100+ articles with codes.</p>
+            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. We are tasked to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2020 - Present</span>
@@ -194,7 +194,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Writer Intern at GeeksforGeeks. I am responsible for writing new articles and improving any existing articles if needed. I have published 90+ articles.</p>
+            <p class="text-justify">I am a Content Writer Intern at GeeksforGeeks. I am responsible for writing new articles and improving any existing articles if needed. I have published 175+ articles.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Apr 2020 - Present</span>
@@ -205,7 +205,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Backend Developer</h3>
             <div class="subheading mb-3">TDI, Indore</div>
-            <p class="text-justify">I worked as a Backend developer (Node Js) at "The Design Institute, Indore". There I worked on multiple projects and learn a lot about UX/UI. And actively involved in the full software development life cycle.
+            <p class="text-justify">I worked as a Backend developer (Node.js) at "The Design Institute, Indore". There I worked on multiple projects and learn a lot about UX/UI. And actively involved in the full software development life cycle.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -424,8 +424,8 @@
         <h2 class="mb-5">Technical Skills</h2>
 
         <ul class="fa-ul mb-0">
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> Node.js, C++, Java, Python and JavaScript</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frameworks Used : </span> Express.js, Sails.js, Spring MVC, Hibernate, Mongoose and Basics of React Native</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python and JavaScript</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frameworks Used : </span> Express.js, Sails.js, Spring MVC, Hibernate and Mongoose</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span> HTML, CSS, Bootstrap and Basics of Angular CLI</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Database : </span> SQL and MongoDB</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Amazon EC2, Postman, Compass, Robo3T, Slack, Maven and GitHub</li>
