Updated Work Experience

--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -164,10 +164,10 @@
           <div class="resume-content">
             <h3 class="mb-0">JavaScript Developer</h3>
             <div class="subheading mb-3">Olecons Technology, Indore</div>
-            <p class="text-justify">I am presently working as a JavaScript Developer. I am responsible for Designing, developing, and implementing JavaScript solutions leveraging Node.js. Participate in an Agile team and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">Worked as a JavaScript Developer and I was responsible for Designing, developing, and implementing JavaScript solutions leveraging Node.js. Participated in an Agile team and actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Feb 2020 - Present</span>
+            <span class="text-primary">Feb 2020 - Aug 2020</span>
           </div>
         </div>
       </div>
@@ -179,6 +179,17 @@
       <div class="w-100">
         <h2 class="mb-5">Internships</h2>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">HealthRx (Bajaj Finserv Health Limited)</div>
+            <p class="text-justify">I am working as a SDE-1 at HealthRx company, Pune. I am actively involved in the full software development life cycle.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Aug 2020 - Present</span>
+          </div>
+        </div>
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
