--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -181,9 +181,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">Software Developer</h3>
+            <h3 class="mb-0">Software Development Engineer</h3>
             <div class="subheading mb-3">HealthRx (Bajaj Finserv Health Limited)</div>
-            <p class="text-justify">I am working as a SDE-1 at HealthRx company, Pune. I am actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I am presently working as a SDE intern at HealthRx company, Pune. I am actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2020 - Present</span>
@@ -194,7 +194,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. We are tasked to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
+            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. My job role is to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2020 - Present</span>
