--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -164,7 +164,8 @@
           <div class="resume-content">
             <h3 class="mb-0">JavaScript Developer</h3>
             <div class="subheading mb-3">Olecons Technology, Indore</div>
-            <p class="text-justify">Worked as a JavaScript Developer and I was responsible for Designing, developing, and implementing JavaScript solutions leveraging Node.js. Participated in an Agile team and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I had worked as a JavaScript Developer and my job roles were to design, develop, and implement JavaScript solutions leveraging Node.js and React.js. I participated in an Agile team and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">Tech Stack: Node.js, Express.js, React.js, MongoDB, and Sails.js</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Feb 2020 - Aug 2020</span>
@@ -181,9 +182,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">Software Development Engineer</h3>
+            <h3 class="mb-0">Full Stack JavaScript Developer</h3>
             <div class="subheading mb-3">HealthRx (Bajaj Finserv Health Limited)</div>
-            <p class="text-justify">I am presently working as a SDE intern at HealthRx company, Pune. I am actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I am presently working as a Full Stack JavaScript Developer intern at HealthRx (Bajaj Finserv Health Limited). I am actively involved in the full software development life cycle. I am a part of the DRx team and contribute to providing Healthcare solutions using MERN stack technology.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Aug 2020 - Present</span>
@@ -194,7 +195,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Reviewer Intern at GeeksforGeeks. My job role is to review the content articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
+            <p class="text-justify">As a Technical Content Reviewer, we are tasked to review the Technical Content Articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2020 - Present</span>
@@ -205,7 +206,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">I am a Content Writer Intern at GeeksforGeeks. I am responsible for writing new articles and improving any existing articles if needed. I have published 175+ articles.</p>
+            <p class="text-justify">As a Content Writer Intern at GeeksforGeeks, I am responsible for writing new articles and improving any existing articles if needed. I have published 185+ articles covering various domains like Software Engineering, Node.js, Express.js, MongoDB, Email, and SMS API's integration, etc.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Apr 2020 - Present</span>
@@ -214,10 +215,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">Backend Developer</h3>
+            <h3 class="mb-0">Node.js Developer</h3>
             <div class="subheading mb-3">TDI, Indore</div>
-            <p class="text-justify">I worked as a Backend developer (Node.js) at "The Design Institute, Indore". There I worked on multiple projects and learn a lot about UX/UI. And actively involved in the full software development life cycle.
-            </p>
+            <p class="text-justify">I had worked as a Node.js Developer intern at The Design Institute, Indore. There I worked on multiple projects and worked closely with the UX/UI team. I managed the Backend in Node.js of the Fauna Nation project and later on I worked on the Water Delivery project. Throughout the process, I was actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2019 - Feb 2020</span>
@@ -226,9 +226,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">MEAN Stak Developer</h3>
+            <h3 class="mb-0">MEAN Stack Developer</h3>
             <div class="subheading mb-3">Mantic Technologies, Indore</div>
-            <p class="text-justify">I worked as a MEAN Stack developer and worked on multiple client projects. And actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I had worked as a MEAN Stack developer. Initially, I created API's in Node.js and did some bug fixing. Later on, I worked on a client project and throughout the process, I was actively involved in the full software development life cycle.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">May 2019 - Jun 2019</span>
@@ -239,7 +239,8 @@
           <div class="resume-content">
             <h3 class="mb-0">Java Developer</h3>
             <div class="subheading mb-3">Mantic Technologies, Indore</div>
-            <p class="text-justify">I worked on the Java framework (Spring & Hibernate). Created web services using the Jersey framework and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">I had worked as a Java Developer intern, my job roles were to create Web Services using the Jersey framework and implement Java solutions using Java frameworks like Spring and Hibernate. I was actively involved in the full software development life cycle.
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Dec 2018 - Jan 2019</span>
@@ -413,11 +414,11 @@
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            <a target="__blank" href="#">Software Engineering virtual internship</a> - JPMorgan Chase
+            <a target="__blank" href="#">Software Engineering Virtual Internship</a> - JPMorgan Chase
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
-            <a target="__blank" href="#">Technology Consultant virtual internship</a> - Deloitte
+            <a target="__blank" href="#">Technology Consultant Virtual Internship</a> - Deloitte
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
@@ -435,11 +436,11 @@
         <h2 class="mb-5">Technical Skills</h2>
 
         <ul class="fa-ul mb-0">
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python and JavaScript</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frameworks Used : </span> Express.js, Sails.js, Spring MVC, Hibernate and Mongoose</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span> HTML, CSS, Bootstrap and Basics of Angular CLI</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python, and JavaScript</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frameworks Used : </span> Node.js, Express.js, Sails.js, Spring MVC, Hibernate, Mongoose, and Basics of React native</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span>  React.js, Handlebars, EJS, HTML, CSS, Bootstrap, and Basics of Angular.js</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Database : </span> SQL and MongoDB</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Amazon EC2, Postman, Compass, Robo3T, Slack, Maven and GitHub</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Postman, Compass, Robo3T, Slack, Basics of Amazon EC2, Azure DevOps, Maven, and GitHub</li>
         </ul>
       </div>
     </section>
