--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -84,7 +84,7 @@
         <div class=" font-weight-bold mb-5">+91-9826527244
           <a href="mailto:gourav.hammad.sdbc@gmail.com"> gourav.hammad.sdbc@gmail.com</a>
         </div>
-        <p class="lead mb-5 text-justify">Looking for a position of responsibility that utilizes my skills and keen to work in an environment where I can enrich my knowledge and contribute to the growth of the company.</p>
+        <p class="lead mb-5 text-justify">I am a Full Stack developer 🚀 from India, Currently working as a Associate Software Developer at Bajaj Finserv Health. I am a part of the DRx team and I work on the Bajaj Health care product i.e. DRx platform which contributes to providing Healthcare solutions. Tech Stack which I currently work upon is ReactJS and JavaScript.</p>
         <div class="social-icons">
           <a target="__blank" href="https://www.linkedin.com/in/gouravhammad/">
             <i class="fab fa-linkedin-in"></i>
@@ -122,10 +122,10 @@
             <h3 class="mb-0">Sushila Devi Bansal College of Technology, Indore</h3>
             <div class="subheading mb-3">Bachelor of Technology (B.Tech)</div>
             <div>Computer Science Engineering</div>
-            <p>CGPA: 7.87</p>
+            <p>CGPA: 8.2</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Aug 2017 - May 2021</span>
+            <span class="text-primary">Aug 2017 - Jul 2021</span>
           </div>
         </div>
 
@@ -162,9 +162,32 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
+            <h3 class="mb-0">Associate Software Engineer</h3>
+            <div class="subheading mb-3">Bajaj Finserv Health, Pune</div>
+            <p class="text-justify">
+              <ul>
+                  <li>Working on the Bajaj Product i.e. the <a target="__blank" href="https://doctors.bajajfinservhealth.in/">DRx Platform</a>, the ultimate platform for hassle-free practice management.</li>
+                  <li>Implemented the  <a target="__blank" href="https://voice.bajajfinservhealth.in/">Voice Prescription Platform</a> which helps in prescribing medicine using Voice Recognition.</li>
+                  <li>Participate in Daily scrums, feature enhancement, product improvement, delivering user stories and bug fixes.</li>
+              </ul>
+            </p>  
+            <p class="text-justify">Tech Stack: ReactJS, JavaScript, HTML and CSS</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jun 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
             <h3 class="mb-0">JavaScript Developer</h3>
             <div class="subheading mb-3">Olecons Technology, Indore</div>
-            <p class="text-justify">I had worked as a JavaScript Developer and my job roles were to design, develop, and implement JavaScript solutions leveraging Node.js and React.js. I participated in an Agile team and actively involved in the full software development life cycle.</p>
+            <p class="text-justify">
+              <ul>
+                <li>Designed, developed, and implemented JavaScript solutions leveraging NodeJS and ReactJS. </li>
+                <li>Participate in an Agile team and actively involved in the full software development life cycle.</li>
+              </ul>
+            </p>
             <p class="text-justify">Tech Stack: Node.js, Express.js, React.js, MongoDB, and Sails.js</p>
           </div>
           <div class="resume-date text-md-right">
@@ -182,12 +205,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
           <div class="resume-content">
-            <h3 class="mb-0">Full Stack JavaScript Developer</h3>
-            <div class="subheading mb-3">HealthRx (Bajaj Finserv Health Limited)</div>
-            <p class="text-justify">I am presently working as a Full Stack JavaScript Developer intern at HealthRx (Bajaj Finserv Health Limited). I am actively involved in the full software development life cycle. I am a part of the DRx team and contribute to providing Healthcare solutions using MERN stack technology.</p>
+            <h3 class="mb-0">Software Development Engineer</h3>
+            <div class="subheading mb-3">Bajaj Finserv Health, Pune</div>
+            <p class="text-justify">I had worked as an SDE intern at Bajaj Finserv Health where I was actively involved in the full software development life cycle. I was a part of the DRx team and contribute to providing Healthcare solutions. Worked on ReactJS Technology.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Aug 2020 - Present</span>
+            <span class="text-primary">Aug 2020 - Jun 2021</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+          <div class="resume-content">
+            <h3 class="mb-0">Technical Content Writer</h3>
+            <div class="subheading mb-3">InterviewBit</div>
+            <p class="text-justify">As a Part-time Technical Content Writer at InterviewBit, I was responsible for writing new articles and improving any existing articles if needed. I had published 10+ articles (each having 3000-4000 words) covering various domains like Software Engineering, Operating systems, Interview questions, etc.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2021 - Jun 2021</span>
           </div>
         </div>
         
@@ -195,10 +229,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Reviewer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">As a Technical Content Reviewer, we are tasked to review the Technical Content Articles written on GeeksforGeeks to ensure that the new content published on the platforms are reviewed and reformed. I have reviewed 300+ articles with codes.</p>
+            <p class="text-justify">As a Technical Content Reviewer, I was tasked to review the Technical Content Articles written on GeeksforGeeks to ensure that the new content published on the platforms is reviewed and reformed. I had reviewed 1250+ articles with codes.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2020 - Present</span>
+            <span class="text-primary">May 2020 - Jun 2021</span>
           </div>
         </div>
 
@@ -206,10 +240,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Technical Content Writer</h3>
             <div class="subheading mb-3">Geeksforgeeks</div>
-            <p class="text-justify">As a Content Writer Intern at GeeksforGeeks, I am responsible for writing new articles and improving any existing articles if needed. I have published 185+ articles covering various domains like Software Engineering, Node.js, Express.js, MongoDB, Email, and SMS API's integration, etc.</p>
+            <p class="text-justify">As a Technical Content Writer at GeeksforGeeks, I was responsible for writing new articles and improving any existing articles if needed. I had published 750+ articles covering various domains like Software Engineering, ReactJS, NodeJS, ExpressJS, MongoDB, Email, and SMS API integration, etc.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Apr 2020 - Present</span>
+            <span class="text-primary">Apr 2020 - Jun 2021</span>
           </div>
         </div>
 
@@ -437,10 +471,10 @@
 
         <ul class="fa-ul mb-0">
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Programming Language : </span> C, C++, Java, Python, and JavaScript</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frameworks Used : </span> Node.js, Express.js, Sails.js, Spring MVC, Hibernate, Mongoose, and Basics of React native</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span>  React.js, Handlebars, EJS, HTML, CSS, Bootstrap, and Basics of Angular.js</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Backend : </span> Node.js, Express.js, Sails.js, Spring MVC, Hibernate, and Mongoose</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Frontend : </span>  React.js, Handlebars, EJS, HTML, CSS, Bootstrap, Basics of Angular.js and React Native</li>
           <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Database : </span> SQL and MongoDB</li>
-          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Postman, Compass, Robo3T, Slack, Basics of Amazon EC2, Azure DevOps, Maven, and GitHub</li>
+          <li><i class="fa-li fa fa-arrow-right text-warning"></i><span class="font-weight-bold text-dark">Tools : </span> Heroku, Postman, Compass, Robo3T, Slack, Jira, Azure DevOps, Maven, and Basics of Amazon EC2</li>
         </ul>
       </div>
     </section>
